--- a/eb-btb-flask/static/main.css
+++ b/eb-btb-flask/static/main.css
@@ -8,6 +8,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
+.container-graph {
+  border: 1px solid black;
+  height: 35vh;
+  text-align: center;
+}
 .bg-steel {
   background-color: #5f788a;
 }
