--- a/eb-btb-flask/templates/nickdev.html
+++ b/eb-btb-flask/templates/nickdev.html
@@ -41,6 +41,15 @@
   <div class="container-graph">
     <h3>Graph Here</h3>
   </div>
+  
+  	<div class="plot">
+		<h1>Plot</h1>
+		<p>{{ name }}</p>
+		<!-- <img src="/plot.png" alt="Chart" height="42" width="42"> -->
+		<img src="/plot.png" alt="Chart">
+		<!-- <img src="/plot.png" alt="Chart" height="42" width="42"> -->
+		<!-- <img src={{ url }} alt="Chart" height="42" width="42"> -->
+	</div>
 
   <script language="javascript" type="text/javascript">
     var league = document.getElementById("league");
