got Everton vs Liverpool plot shoring on nickdev

--- a/eb-btb-flask/templates/nickdev.html
+++ b/eb-btb-flask/templates/nickdev.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h2>EU Football league betting data!<h2>
+  <!--<h2>EU Football league betting data!<h2>
     <form class="mb-5" methods="POST">
       {{ form.csrf_token }}
       {{ form.league }}
@@ -28,7 +28,7 @@
           });
         });
       }
-    </script>
+    </script> -->
 	<div class="plot">
 		<h1>Plot</h1>
 		<p>{{ name }}</p>
