added ipython notebooks to nickdev branch

--- a/eb-btb-flask/templates/nickdev.html
+++ b/eb-btb-flask/templates/nickdev.html
@@ -30,7 +30,7 @@
       }
     </script> -->
 	<div class="plot">
-		<h1>Plot</h1>
+		<h1>Teams vs. Each Other</h1>
 		<p>{{ name }}</p>
 		<!-- <img src="/plot.png" alt="Chart" height="42" width="42"> -->
 		<img src="/plot.png" alt="my plot">
