--- a/eb-btb-flask/templates/home.html
+++ b/eb-btb-flask/templates/home.html
@@ -1,13 +1,33 @@
 {% extends "layout.html" %}
 {% block content %}
   <h2>EU Football league betting data!<h2>
-    <form class="mb-5" methods="POST">
+    <form class="mb-5" method="POST">
       {{ form.csrf_token }}
-      {{ form.league }}
-      {{ form.team1 }}
-      {{ form.team2 }}
-      <input type="submit">
+      <div class="form-group">
+        {{ form.league.label(class="form-control-label") }}
+        {{ form.league(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.team1.label(class="form-control-label") }}
+        {{ form.team1(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.team2.label(class="form-control-label") }}
+        {{ form.team2(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.submit(class="btn btn-outline-info") }}
+      </div>
     </form>
+
+    <div class="container-graph">
+      {% if league %}
+        <h2>League: {{ league }}</h2>
+        <h3>Team 1: {{ team1 }}</h3>
+        <h3>Team 2: {{ team2 }}</h3>
+      {% endif %}
+    </div>
+
     <script>
       let user_league = document.getElementById('league');
       let user_team1 = document.getElementById('team1');
@@ -16,7 +36,7 @@
       user_league.onchange = function() {
         league = user_league.value;
 
-        fetch('/team/' + league).then(function(response) {
+        fetch('/' + league).then(function(response) {
           response.json().then(function(data) {
             let optionHTML = '';
             for (let team of data.teams) {
@@ -29,42 +49,4 @@
         });
       }
     </script>
-    <!--div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <form>
-          <select id="league" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <option value="" selected disabled hidden>League &#9660;</option>
-            {% for league in leagues %}
-              <option>{{ league[0] }}</option>
-            {% endfor %}
-          </select>
-        </form>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with dropdown button">
-    </div>
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <select class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <option value="" selected disabled hidden>Team 1 &#9660;</option>
-        {% for team in teams %}
-          <option>{{ team[0] }}</option>
-        {% endfor %}
-      </select>
-    </div>
-    <input type="text" class="form-control" aria-label="Text input with dropdown button">
-  </div>
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <select id="ddlViewBy" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <option value="" selected disabled hidden>Team 2 &#9660;</option>
-        {% for team in teams %}
-          <option>{{ team[0] }}</option>
-        {% endfor %}
-      </select>
-    </div>
-    <input type="text" class="form-control" aria-label="Text input with dropdown button">
-  </div-->
-  <div class="container-graph">
-    <h3>Graph Here</h3>
-  </div>
 {% endblock content %}
