Updated application to new table. Updated home page to display date of the match.

--- a/eb-btb-flask/templates/home.html
+++ b/eb-btb-flask/templates/home.html
@@ -26,7 +26,7 @@
         <h3>Team 1: {{ team1 }}</h3>
         <h3>Team 2: {{ team2 }}</h3>
         {% for row in teams_record %}
-          <h4><b>Home:</b> {{ row[0] }} <b>Away:</b> {{ row[1] }} <b>Winner:</b> {{ row[2] }}</h4>
+          <h4><b>Date:</b> {{ row[0] }} <b>Home:</b> {{ row[1] }} <b>Away:</b> {{ row[2] }} <b>Winner:</b> {{ row[3] }}</h4>
         {% endfor %}
       {% endif %}
     </div>
