--- a/eb-btb-flask/templates/home.html
+++ b/eb-btb-flask/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <h2>EU Football league betting data!<h2>
-    <form class="mb-5" method="POST">
+    <form class="mb-5" method="POST"> <!-- if wanted to send to nick-dev, do action = "/nick-dev" -->
       {{ form.csrf_token }}
       <div class="form-group">
         {{ form.league.label(class="form-control-label") }}
@@ -16,7 +16,7 @@
         {{ form.team2(class="form-control form-control-lg") }}
       </div>
       <div class="form-group">
-        {{ form.submit(class="btn btn-outline-info") }}
+        {{ form.submit(class="btn btn-outline-info") }} <!-- when you submit it does POST -->
       </div>
     </form>
 
