finally got plot displaying on nickdev

--- a/eb-btb-flask/templates/nickdev.html
+++ b/eb-btb-flask/templates/nickdev.html
@@ -1,10 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
-  <!-- <h2>EU Football league betting data!<h2>
+  <h2>EU Football league betting data!<h2>
     <div class="plot">
-      <h1>Teams vs. Each Other</h1>
-	<p>{{ "new_plot" }}</p>
-	<img src= "/Users/nickvarberg/Desktop/School/Eulers-Men-Sports-Betting/eb-btb-flask/static/new_plot.png", alt="my plot", height
-	  = "42", width = "42">
+			<img src= {{ url}} alt="my plot">
+    </div>
+    
+    <!--
+    <div>
+			<img src= "/team_records" alt="my plot">
     </div> -->
+    
 {% endblock content %}
