--- a/eb-btb-flask/templates/home.html
+++ b/eb-btb-flask/templates/home.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
+  <h2>Erik Test TEst asdfasdf</h2>
+
+  <img src="/plot.txt" alt="my plot">
+  
   <h2>EU Football league betting data!<h2>
     <form class="mb-5" method="POST">
       {{ form.csrf_token }}
