added features to ML

--- a/eb-btb-flask/templates/erikTest.html
+++ b/eb-btb-flask/templates/erikTest.html
@@ -22,11 +22,25 @@
         {{ form.submit(class="btn btn-outline-info") }}
       </div>
     </form> -->
+
+
+<!-- <form>
+  <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" placeholder="First name">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Last name">
+    </div>
+  </div>
+</form>
+
+
 <select name="league" method="GET" action="/">
   <option value="{{leagues[0]}}" selected>{{leagues[0]}}</option>
   {% for league in leagues[1:] %}
     <option value="{{league}}">{{league}}</option>
   {% endfor %}
 </select>
-<input type="submit" value="Submit">
+<input type="submit" value="Submit"> -->
 {% endblock content %}
