--- a/eb-btb-flask/static/main.css
+++ b/eb-btb-flask/static/main.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container-graph {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 35vh;
   text-align: center;
 }
