--- a/eb-btb-flask/templates/layout.html
+++ b/eb-btb-flask/templates/layout.html
@@ -9,7 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
 
     {% if title %}
         <title>Beat The Bookie - {{ title }}</title>
@@ -30,22 +34,17 @@
                 <a class="nav-item nav-link" href="/">Home</a>
                 <a class="nav-item nav-link" href="/about">About</a>
               </div>
-              <!-- Navbar Right Side -->
-              <!--div class="navbar-nav">
-                <a class="nav-item nav-link" href="/login">Login</a>
-                <a class="nav-item nav-link" href="/register">Register</a>
-              </div -->
             </div>
           </div>
         </nav>
       </header>
       <main role="main" class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-11">
             {% block content %}{% endblock %}
           </div>
-          <div class="col-md-4">
-            <!--div class="content-section">
+          <!--div class="col-md-4">
+            <div class="content-section">
               <h3>Things to Explore</h3>
               <p class='text-muted'>Explore more data!
                 <ul class="list-group">
@@ -55,8 +54,8 @@
                   <li class="list-group-item list-group-item-light">???</li>
                 </ul>
               </p>
-            </div-->
-          </div>
+            </div>
+          </div-->
         </div>
       </main>
 
