--- a/eb-btb-flask/templates/layout.html
+++ b/eb-btb-flask/templates/layout.html
@@ -38,9 +38,9 @@
           </div>
         </nav>
       </header>
-      <main role="main" class="container">
+      <main role="main" class="container-fluid">
         <div class="row">
-          <div class="col-md-11">
+          <div class="col-md-12">
             {% block content %}{% endblock %}
           </div>
           <!--div class="col-md-4">
